Fixed z-index issue for the current line

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -62,7 +62,6 @@ body {
 }
 .monaco-editor .view-overlays .current-line {
   position: absolute;
-  z-index: 11;
   transform: translateX(-8px);
 }
 .monaco-editor .margin-view-overlays .line-numbers,
